# drf-auth

./: README.md  db.sqlite3  pyproject.toml
snacks/: models.py
templates/: _base.html
