[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["aliwalid96 <ali-waleed96@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
